<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_margin="20dp"
            android:gravity="center"
            style="@style/font_big"/>

        <!-- Input fields -->
        <LinearLayout
            android:id="@+id/fields_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/title_text">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_credintials_to_register"
                style="@style/font_small"
                />

            <!-- full-name -->
            <EditText
                    android:id="@+id/field_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:textColorHint="@color/light_grey"
                    android:textDirection="ltr"
                    android:textColor="@color/black"/>

            <!-- username -->
            <EditText
                    android:id="@+id/field_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textDirection="ltr"
                    android:textColorHint="@color/light_grey"
                    android:textColor="@color/black"/>

            <!-- email -->
            <EditText
                    android:id="@+id/field_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                android:textDirection="ltr"
                    android:textColorHint="@color/light_grey"
                    android:textColor="@color/black"/>

            <!-- password -->
                <EditText
                    android:id="@+id/field_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textDirection="ltr"
                    android:textColorHint="@color/light_grey"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

            <!-- password confirm -->
            <EditText
                    android:id="@+id/field_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_confirm"
                    android:textDirection="ltr"
                    android:textColorHint="@color/light_grey"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>

        </LinearLayout>


        <Button
            android:id="@+id/button_submit"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_below="@id/fields_input"
            android:text="@string/register"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            style="@style/nav_button_general"
            android:layout_margin="20dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_submit"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/text_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:layout_alignParentLeft="true"
                style="@style/font_small"/>

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/font_small"
                android:textColor="@color/blue"
                android:text="@string/login"
                android:layout_toRightOf="@id/text_already_have_account"
                android:clickable="true"
                />


        </RelativeLayout>


    </RelativeLayout>

</ScrollView>