<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <GridLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:rowCount="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_row="0">

            <TextView
                android:id="@+id/the_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/new_post"
                android:layout_margin="10dp"
                android:background="@null"
                android:layout_gravity="left"
                style="@style/font_medium"
                />

            <ImageButton
                android:id="@+id/button_exit"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_action_delete_sign_48px"
                android:background="@color/white"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <EditText
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_margin="10dp"
            android:layout_below="@id/the_title"
            android:background="@android:color/transparent"
            android:hint="@string/whats_on_your_mind"
            android:layout_row="1"
            android:layout_rowSpan="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_row="8">
            <ImageButton
                android:id="@+id/button_attach_photo"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_photo_camera_white_24dp"
                android:contentDescription="@string/attach_photo"/>

            <ImageButton
                android:id="@+id/button_attach_link"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_link_white_24dp"
                android:contentDescription="@string/attach_link"/>

            <TextView
                android:id="@+id/text_link_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_row="9">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_cancel"
                android:layout_weight="5"
                android:layout_margin="10dp"
                android:text="@string/cancel"
                style="@style/nav_button_negative"
                android:gravity="center" />


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_submit"
                android:layout_weight="5"
                android:layout_margin="10dp"
                android:text="@string/post"
                style="@style/nav_button_general"
                android:gravity="center" />
        </LinearLayout>
    </GridLayout>



    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
