<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="90dp"
    android:paddingBottom="90dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/the_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/select_courses_to_be_tutored"
                android:layout_margin="10dp"
                android:background="@null"
                android:layout_gravity="left"
                style="@style/font_medium"
                />

            <ImageButton
                android:id="@+id/button_exit"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_action_delete_sign_48px"
                android:background="@color/white"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_margin="10dp"
            android:hint="@string/courses_list"
            android:layout_below="@id/title_bar"/>

        <Spinner
            android:id="@+id/spinner_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_alignParentBottom="true">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_cancel"
                android:layout_weight="5"
                android:layout_margin="10dp"
                android:text="@string/cancel"
                style="@style/nav_button_negative"
                android:gravity="center" />


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_submit"
                android:layout_weight="5"
                android:layout_margin="10dp"
                android:text="@string/submit"
                style="@style/nav_button_general"
                android:gravity="center" />
        </LinearLayout>
    </RelativeLayout>



    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_width"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
