<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="@color/blue_light"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/text_page_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                style="@style/font_medium"
                android:layout_margin="10dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/text_page_title">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/profile_circular_border_imageview"
                    android:padding="5dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_app_icon_big" />

                <EditText
                    android:id="@+id/user_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:text="@string/enter_username"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/fields_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_full_name"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/text_fullname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#fff"
                android:hint="@string/enter_full_name"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:drawableLeft="@drawable/ic_face_black_24dp"
                android:drawablePadding="5dp"/>

            <!--
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/text_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:elevation="4dp"
                android:inputType="none"
                android:padding="20dp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="5dp"/>-->

            <TextView
                android:id="@+id/title_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_password"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/text_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:clickable="true"
                android:hint="@string/enter_password"
                android:drawableLeft="@drawable/ic_security_black_24dp"
                android:elevation="4dp"
                android:padding="20dp"
                android:drawablePadding="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_about"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/text_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:hint="@string/enter_about"
                android:clickable="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:drawableLeft="@drawable/ic_info_outline_black_24dp"
                android:drawablePadding="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/apply"
            android:gravity="center"
            style="@style/nav_button_general"
            android:layout_below="@id/fields_layout"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>